[package]
name = "gsm0710-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
mio = { version = "0.8.11" }
mio-serial = "5.0.5"
nix = { version = "0.29.0", features = ["term", "fs"] }
nom = "7.1.3"
ringbuffer = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
simple_logger = "5.0.0"
thiserror = "1.0.63"
